@@ -8,4 +8,4 @@ javac -d "$APP_OUT" src/main/java/com/cdplayer/CDPlayer.java
 mkdir -p "$APP_OUT/com/cdplayer"
 cp src/main/java/com/cdplayer/icon.png "$APP_OUT/com/cdplayer/icon.png"
 echo "Launching CDPlayer..."
-java -Dsun.java2d.metal=false -cp "$APP_OUT" com.cdplayer.CDPlayer
+java -Dsun.java2d.metal=false --enable-native-access=ALL-UNNAMED -cp "$APP_OUT" com.cdplayer.CDPlayer
